test/zinc_source/compile_errors/error_handling/01_ok_without_context.zn
// expected-error: Ok\(\.\.\.\) requires an expected Result<T, E> context
fn main() {
    value = Ok(1)
    print(value)
}
